[gd_scene load_steps=7 format=2]

[ext_resource path="res://Objects/Powerups/Template/Powerup.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="SpatialMaterial" id=1]
emission_enabled = true
emission = Color( 1, 0.772549, 0, 1 )
emission_energy = 0.3
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="PrismMesh" id=2]
material = SubResource( 1 )
size = Vector3( 0.8, 0.8, 0.5 )

[sub_resource type="SphereShape" id=3]
radius = 0.361929

[sub_resource type="Animation" id=4]
resource_name = "Powerup_Rotate"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Model:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 360, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Model:translation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.05, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Model/MeshInstance:mesh:material:emission_energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.3, 1.25 ]
}

[node name="Powerup" type="Spatial"]
script = ExtResource( 1 )

[node name="Model" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Model"]
mesh = SubResource( 2 )
material/0 = null

[node name="Sprite3D" type="Sprite3D" parent="Model/MeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.86561, 0 )
modulate = Color( 1, 0.984314, 0, 1 )
texture = ExtResource( 2 )

[node name="CollArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="CollArea"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 30.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Powerup_Rotate"
anims/Powerup_Rotate = SubResource( 4 )

[connection signal="powerup_touched" from="." to="." method="_on_Powerup_powerup_touched"]
[connection signal="body_entered" from="CollArea" to="." method="_on_CollArea_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
